fix page from overflowing on x-axis

--- a/src/styles/ContentLayout.module.less
+++ b/src/styles/ContentLayout.module.less
@@ -1,7 +1,7 @@
 @import './themes.less';
 
 .contentlayoutcontainer {
-  width: 100vw;
+  width: 100%;
   padding: calc(@navbar-height + 3rem) 9%;
 }
 
