--- a/src/styles/LandingPage.module.less
+++ b/src/styles/LandingPage.module.less
@@ -34,6 +34,7 @@
     display: flex;
     flex-direction: column;
     padding: 0 @screen-padding;
+    overflow-x: hidden;
 }
 
 // Needs to be changed
