--- a/src/styles/MasterPage.module.less
+++ b/src/styles/MasterPage.module.less
@@ -3,7 +3,6 @@
 @import 'themes.less';
 
 .MasterLayout {
-  width: 100vw;
   padding: 0;
 }
 
@@ -24,7 +23,6 @@
 .MasterFooter {
   background-color: #DBDBDB;
   text-align: center;
-  width: 100vw;
 }
 
 .MasterFooterText {
@@ -40,7 +38,7 @@
   height: @navbar-height;
   display: flex;
   flex-direction: column;
-  width: 100vw;
+  width: 100%;
 }
 
 .MenuCol {
